3.2.1/_sources/gallery/scales/power_norm.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_scales_power_norm.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_scales_power_norm.py:


========================
Exploring normalizations
========================

Various normalization on a multivariate normal distribution.


.. code-block:: default


    import matplotlib.pyplot as plt
    import matplotlib.colors as mcolors
    import numpy as np
    from numpy.random import multivariate_normal

    data = np.vstack([
        multivariate_normal([10, 10], [[3, 2], [2, 3]], size=100000),
        multivariate_normal([30, 20], [[2, 3], [1, 3]], size=1000)
    ])

    gammas = [0.8, 0.5, 0.3]

    fig, axs = plt.subplots(nrows=2, ncols=2)

    axs[0, 0].set_title('Linear normalization')
    axs[0, 0].hist2d(data[:, 0], data[:, 1], bins=100)

    for ax, gamma in zip(axs.flat[1:], gammas):
        ax.set_title(r'Power law $(\gamma=%1.1f)$' % gamma)
        ax.hist2d(data[:, 0], data[:, 1], bins=100, norm=mcolors.PowerNorm(gamma))

    fig.tight_layout()

    plt.show()




.. image:: /gallery/scales/images/sphx_glr_power_norm_001.png
    :class: sphx-glr-single-img





------------

References
""""""""""

The use of the following functions, methods, classes and modules is shown
in this example:


.. code-block:: default


    import matplotlib
    matplotlib.colors
    matplotlib.colors.PowerNorm
    matplotlib.axes.Axes.hist2d
    matplotlib.pyplot.hist2d




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <function hist2d at 0x7f6ea103be50>




.. _sphx_glr_download_gallery_scales_power_norm.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: power_norm.py <power_norm.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: power_norm.ipynb <power_norm.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
